[package]
name = "ynwm"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.6"

[dependencies.wlroots-sys]
path = "../wlroots-sys"
features = ["unstable"]
